base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: klikgo-ingress
  namespace: klikgo
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/v1/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8000

          - path: /api/v1/products
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 8001

          - path: /api/v1/orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8002

          - path: /api/v1/cart
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8002

          - path: /api/v1/payments
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 8003

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
